[gd_scene format=3 uid="uid://jmp37sa7v4fm"]

[ext_resource type="Script" uid="uid://b3wj7sk362cs8" path="res://Scripts/kill_pilot_end.gd" id="1_4gciu"]
[ext_resource type="PackedScene" uid="uid://n2giyhtwedwu" path="res://Scenes/fade_to_black_metallica.tscn" id="2_jdwng"]

[sub_resource type="LabelSettings" id="LabelSettings_bsvu1"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_4gciu"]
font_size = 80

[node name="KillPilot" type="CanvasLayer" unique_id=2141000477]
script = ExtResource("1_4gciu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=740580812]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="." unique_id=1744977735]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -568.5
offset_top = 27.0
offset_right = 568.5
offset_bottom = 312.0
grow_horizontal = 2
text = "You used the alien device to mind control the pilot. 
You take off in his plane and 20 minutes later a massive explosion rocks the plane. 
You escape fine and the mission was a success.
You land on a beach somewhere, where? You don't care. You're alive, thats all you care about; 
not about the people who now have no plane and don't know where their pilot is. You sit on
the beach with your new found plane, enjoying the new life you now have."
label_settings = SubResource("LabelSettings_bsvu1")
horizontal_alignment = 1

[node name="End" type="Label" parent="." unique_id=1873960818]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -55.0
offset_right = 154.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "The End"
label_settings = SubResource("LabelSettings_4gciu")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1282772970]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -178.0
offset_right = 254.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 199

[node name="Button" type="Button" parent="HBoxContainer" unique_id=858472363]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play Again"

[node name="Button2" type="Button" parent="HBoxContainer" unique_id=1663816422]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Fade To Black Metallica" parent="." unique_id=2014068824 instance=ExtResource("2_jdwng")]
visible = false

[node name="Timer" type="Timer" parent="." unique_id=729298336]
wait_time = 15.0
autostart = true

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
